fixed overflow

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,6 +1,7 @@
 html, body{
 	margin: 0;
 	padding: 0;
+	overflow-x: hidden;
 }
 
 body {
@@ -52,5 +53,5 @@ h1 {
 }
 
 #search-button {
-	
+
 }
