--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,6 +1,5 @@
-@import url("/static/custom.css");
 iframe {
 	width: 90%;
 	text-align: center;
-	margin: 1%;
+	margin: 5%;
 }
